# src/Routes/UserDetailsBio/index.js
@@ -6,7 +6,7 @@ const { UserDetailsController } = require("../../App/Controllers");
 const routes = Router();
 
 routes.get("/bio", authMiddleware, UserDetailsController.getUserBioDetails);
-routes.post("/bio", authMiddleware, UserDetailsController.create);
+routes.post("/bio/new", authMiddleware, UserDetailsController.create);
 routes.put("/bio/:id", authMiddleware, UserDetailsController.update);
 routes.delete("/bio/:id", authMiddleware, UserDetailsController.delete);
 
